--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
     <string name="app_logo_bottom">DONE THAT!</string>
     <string name="app_version_info">Version 2.0.0\nCopyright © 2011 Mamlambo\nAll
     Rights Reserved.</string>
+    <string
+        name="menu2">MAIN MENU</string>
+    <string
+        name="menu_item_setting">Settings</string>
+    <string
+        name="menu_item_play">Play Game</string>
+    <string
+        name="menu_item_scores">View Scores</string>
+    <string name="menu_item_help">Help</string>
+    <string name="earth">earth</string>
+    <string name="menu_item_settings">Settings</string>
+    <string name="half_earth">half earth</string>
 </resources>
